--- a/ciomit-style.css
+++ b/ciomit-style.css
@@ -7,7 +7,7 @@
 #mainNav .dropdown-menu > li > a {
     color: #000 !important;
     background-color: #fff !important;
-    border: 0px !important;
+    border-bottom: 1px solid #eaeaea !important;
     font-size: 15px !important;
     font-weight: 300 !important;
 }
@@ -23,7 +23,8 @@
 #mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
 #mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
     background-color: #fff !important;
-    border: 0px !important;
+    border: 2px solid #000 !important;
+    border-radius: 0;
 }
 #mainNav.navbar-default .navbar-nav > li > a,
 #mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a,
@@ -33,4 +34,13 @@
 #mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
     color: #000 !important;
     font-size: 15px !important;
+}
+.dropdown-menu {
+    padding: 0 !important;
+}
+.dropdown-menu > li {
+    margin-bottom: 0px !important;
+}
+.dropdown-menu > li > a {
+    padding: 10px 20px 10px 20px;
 }
