--- a/ciomit-style.css
+++ b/ciomit-style.css
@@ -10,6 +10,7 @@
     border-bottom: 1px solid #eaeaea !important;
     font-size: 15px !important;
     font-weight: 300 !important;
+    transition: 300ms all ease-in-out !important;
 }
 #mainNav .dropdown-menu,
 #mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
@@ -24,12 +25,15 @@
     background-color: #fff !important;
 }
 #mainNav.navbar-default .navbar-nav > li > a,
-#mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a,
+#mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #000 !important;
+    transition: 300ms all ease-in-out !important;
+}
 #mainNav.navbar-default .navbar-nav > li > a:hover,
 #mainNav.navbar-default .navbar-nav > li > a:focus,
 #mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
 #mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #000 !important;
+    color: #bababa !important;
 }
 #mainNav.navbar-default .navbar-nav > li > a,
 #mainNav.navbar-default .navbar-nav .open .dropdown-menu > li > a,
