fix:added body font

--- a/ciomit-style.css
+++ b/ciomit-style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400&family=Raleway&display=swap");
+@import url("https://p.typekit.net/p.css?s=1&k=sqn7xge&ht=tk&f=47872.47873.47874.47875.47876.47877.47878.47879.47880.47881.47882.47883.47884.47885.47886.47887.47888.47889&a=10145746&app=typekit&e=css");
+body {font-family: rustica, sans-serif !important;}
 .menubg {
     background-color: #fff !important;
 }
