--- a/ciomit-style.css
+++ b/ciomit-style.css
@@ -1,5 +1,145 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400&family=Raleway&display=swap");
+/*
+ * The Typekit service used to deliver this font or fonts for use on websites
+ * is provided by Adobe and is subject to these Terms of Use
+ * http://www.adobe.com/products/eulas/tou_typekit. For font license
+ * information, see the list below.
+ *
+ * rustica:
+ *   - http://typekit.com/eulas/00000000000000007735ee11
+ *   - http://typekit.com/eulas/00000000000000007735ee12
+ *   - http://typekit.com/eulas/00000000000000007735ee13
+ *   - http://typekit.com/eulas/00000000000000007735ee14
+ *   - http://typekit.com/eulas/00000000000000007735ee15
+ *   - http://typekit.com/eulas/00000000000000007735ee16
+ *   - http://typekit.com/eulas/00000000000000007735ee17
+ *   - http://typekit.com/eulas/00000000000000007735ee19
+ *   - http://typekit.com/eulas/00000000000000007735ee18
+ *   - http://typekit.com/eulas/00000000000000007735ee1a
+ *   - http://typekit.com/eulas/00000000000000007735ee1b
+ *   - http://typekit.com/eulas/00000000000000007735ee1c
+ *   - http://typekit.com/eulas/00000000000000007735ee1d
+ *   - http://typekit.com/eulas/00000000000000007735ee1e
+ *   - http://typekit.com/eulas/00000000000000007735ee1f
+ *   - http://typekit.com/eulas/00000000000000007735ee20
+ *   - http://typekit.com/eulas/00000000000000007735ee21
+ *   - http://typekit.com/eulas/00000000000000007735ee22
+ *
+ * © 2009-2022 Adobe Systems Incorporated. All Rights Reserved.
+ */
+/*{"last_published":"2022-03-23 14:52:05 UTC"}*/
+
 @import url("https://p.typekit.net/p.css?s=1&k=sqn7xge&ht=tk&f=47872.47873.47874.47875.47876.47877.47878.47879.47880.47881.47882.47883.47884.47885.47886.47887.47888.47889&a=10145746&app=typekit&e=css");
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/541762/00000000000000007735ee11/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3") format("woff2"),url("https://use.typekit.net/af/541762/00000000000000007735ee11/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3") format("woff"),url("https://use.typekit.net/af/541762/00000000000000007735ee11/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:100;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/8c0d41/00000000000000007735ee12/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3") format("woff2"),url("https://use.typekit.net/af/8c0d41/00000000000000007735ee12/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3") format("woff"),url("https://use.typekit.net/af/8c0d41/00000000000000007735ee12/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3") format("opentype");
+font-display:auto;font-style:italic;font-weight:100;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/c89bfc/00000000000000007735ee13/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n2&v=3") format("woff2"),url("https://use.typekit.net/af/c89bfc/00000000000000007735ee13/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n2&v=3") format("woff"),url("https://use.typekit.net/af/c89bfc/00000000000000007735ee13/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n2&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:200;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/5dbec1/00000000000000007735ee14/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i2&v=3") format("woff2"),url("https://use.typekit.net/af/5dbec1/00000000000000007735ee14/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i2&v=3") format("woff"),url("https://use.typekit.net/af/5dbec1/00000000000000007735ee14/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i2&v=3") format("opentype");
+font-display:auto;font-style:italic;font-weight:200;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/8197d8/00000000000000007735ee15/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3") format("woff2"),url("https://use.typekit.net/af/8197d8/00000000000000007735ee15/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3") format("woff"),url("https://use.typekit.net/af/8197d8/00000000000000007735ee15/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:300;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/8373d4/00000000000000007735ee16/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i3&v=3") format("woff2"),url("https://use.typekit.net/af/8373d4/00000000000000007735ee16/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i3&v=3") format("woff"),url("https://use.typekit.net/af/8373d4/00000000000000007735ee16/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i3&v=3") format("opentype");
+font-display:auto;font-style:italic;font-weight:300;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/d408f9/00000000000000007735ee17/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff2"),url("https://use.typekit.net/af/d408f9/00000000000000007735ee17/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("woff"),url("https://use.typekit.net/af/d408f9/00000000000000007735ee17/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:400;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/f109f9/00000000000000007735ee19/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff2"),url("https://use.typekit.net/af/f109f9/00000000000000007735ee19/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("woff"),url("https://use.typekit.net/af/f109f9/00000000000000007735ee19/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3") format("opentype");
+font-display:auto;font-style:italic;font-weight:400;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/6e9a94/00000000000000007735ee18/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff2"),url("https://use.typekit.net/af/6e9a94/00000000000000007735ee18/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("woff"),url("https://use.typekit.net/af/6e9a94/00000000000000007735ee18/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n5&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:500;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/5ffd1a/00000000000000007735ee1a/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i5&v=3") format("woff2"),url("https://use.typekit.net/af/5ffd1a/00000000000000007735ee1a/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i5&v=3") format("woff"),url("https://use.typekit.net/af/5ffd1a/00000000000000007735ee1a/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i5&v=3") format("opentype");
+font-display:auto;font-style:italic;font-weight:500;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/afc8e2/00000000000000007735ee1b/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3") format("woff2"),url("https://use.typekit.net/af/afc8e2/00000000000000007735ee1b/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3") format("woff"),url("https://use.typekit.net/af/afc8e2/00000000000000007735ee1b/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:600;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/5fce99/00000000000000007735ee1c/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3") format("woff2"),url("https://use.typekit.net/af/5fce99/00000000000000007735ee1c/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3") format("woff"),url("https://use.typekit.net/af/5fce99/00000000000000007735ee1c/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3") format("opentype");
+font-display:auto;font-style:italic;font-weight:600;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/ecc700/00000000000000007735ee1d/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff2"),url("https://use.typekit.net/af/ecc700/00000000000000007735ee1d/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("woff"),url("https://use.typekit.net/af/ecc700/00000000000000007735ee1d/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:700;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/662c05/00000000000000007735ee1e/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3") format("woff2"),url("https://use.typekit.net/af/662c05/00000000000000007735ee1e/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3") format("woff"),url("https://use.typekit.net/af/662c05/00000000000000007735ee1e/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i7&v=3") format("opentype");
+font-display:auto;font-style:italic;font-weight:700;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/fd1c22/00000000000000007735ee1f/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n8&v=3") format("woff2"),url("https://use.typekit.net/af/fd1c22/00000000000000007735ee1f/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n8&v=3") format("woff"),url("https://use.typekit.net/af/fd1c22/00000000000000007735ee1f/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n8&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:800;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/5ac343/00000000000000007735ee20/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i8&v=3") format("woff2"),url("https://use.typekit.net/af/5ac343/00000000000000007735ee20/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i8&v=3") format("woff"),url("https://use.typekit.net/af/5ac343/00000000000000007735ee20/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i8&v=3") format("opentype");
+font-display:auto;font-style:italic;font-weight:800;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/c887cc/00000000000000007735ee21/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n9&v=3") format("woff2"),url("https://use.typekit.net/af/c887cc/00000000000000007735ee21/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n9&v=3") format("woff"),url("https://use.typekit.net/af/c887cc/00000000000000007735ee21/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n9&v=3") format("opentype");
+font-display:auto;font-style:normal;font-weight:900;font-stretch:normal;
+}
+
+@font-face {
+font-family:"rustica";
+src:url("https://use.typekit.net/af/3c5c10/00000000000000007735ee22/30/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i9&v=3") format("woff2"),url("https://use.typekit.net/af/3c5c10/00000000000000007735ee22/30/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i9&v=3") format("woff"),url("https://use.typekit.net/af/3c5c10/00000000000000007735ee22/30/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i9&v=3") format("opentype");
+font-display:auto;font-style:italic;font-weight:900;font-stretch:normal;
+}
+
+.tk-rustica { font-family: "rustica",sans-serif; }
 body {font-family: rustica, sans-serif !important;}
 .menubg {
     background-color: #fff !important;
@@ -67,6 +207,56 @@ body {font-family: rustica, sans-serif !important;}
     -moz-osx-font-smoothing: grayscale;
     margin-left: 10px;
     line-height: normal;
+}
+
+.headerTop a span {
+    color: #000 !important;
+    margin: 0px 0 0 0;
+}
+
+.headerTop a {
+    margin: 10px 0 0 0 !important;
+    display: inline-block !important;
+}
+
+.panel-default>.panel-heading {
+    border-radius: 0px !important;
+    background: #111821 !important;
+    color: #fff !important;
+}
+
+.panel-default {
+    border-radius: 0px !important;
+}
+
+.cItemDiv:hover .cItemTitleDiv, .cCategoryDiv:hover .cItemTitleDiv {
+    background: none !important;
+    padding: 0 !important;
+}
+.cItemDiv:hover .cItemTitle, .cItemDiv:hover .cItemPrice, .cCategoryDiv:hover .cCategoryTitle {
+    color: #000 !important;
+}
+.cItemDiv, .cCategoryDiv {
+    border-radius: 0px !important;
+}
+
+.btn-default {
+    color: #fff !important;
+    background-color: #E2211C !important;
+    border-color: #E2211C !important;
+}
+
+.bgFooter h1 {
+    color: #000 !important;
+}
+
+.bgFooter {
+    background: #111821 !important;
+}
+.cCategoryTitle {
+    font-size: 19px !important;
+    font-weight: 600 !important;
+    color: #111821 !important;
 }
 
 /* Media */
